# cachitogpt

./: .bumpver.toml  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: generator.py  main.py  trainer.py
app/backend/api/: __init__.py  app_factory.py  include_routes.py
app/backend/api/routes/: __init__.py  cachito_routes.py  health_routes.py  ui_routes.py
app/backend/schemas/: __init__.py  prompt_schemas.py
app/backend/services/: __init__.py  cachito_service.py
app/gpt/: __init__.py  attention.py  dataset.py  embedding.py  model.py  network.py  tokenizer.py  transformer_block.py
app/schemas/: model_response.py
app/settings/: __init__.py  ascii_art.py  config.py  logging_config.py
app/ui/: index.html
app/ui/layouts/: base.html
app/ui/partials/: _chat_section.html  _footer.html  _header.html  _navbar.html  _sidebar.html
app/ui/static/css/: style.css
app/ui/static/js/: main.js
app/utils/: clean_checkpoint.py
data/: ancor.txt  corpus.txt  corpus_2.txt  prueba.txt
models/: cachito_2_config.json  cachito_config.json  dussel_config.json
tests/: test_components.py  test_generate_from_prompt.py  test_multihead_attention.py  test_train.py  train_script_original.py
tokenizer/: tokenizer.json
